revert local exec with full command string